# recastnavigation-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.bat  build.rs
.circleci/: config.yml
.github/workflows/: main.yml
expected/solo_mesh/: dungeon_chf.rkyv  dungeon_cset.rkyv  dungeon_distance_to_wall.rkyv  dungeon_dmesh.rkyv  dungeon_find_local_neighbourhood.rkyv  dungeon_find_polys_in_circle.rkyv  dungeon_find_polys_in_shape.rkyv  dungeon_path_find_follow.rkyv  dungeon_path_find_sliced.rkyv  dungeon_path_find_straight.rkyv  dungeon_pmesh.rkyv  dungeon_raycast.rkyv  dungeon_solid_1.rkyv  dungeon_solid_2.rkyv  dungeon_triareas.rkyv  nav_test_chf.rkyv  nav_test_cset.rkyv  nav_test_distance_to_wall.rkyv  nav_test_dmesh.rkyv  nav_test_find_local_neighbourhood.rkyv  nav_test_find_polys_in_circle.rkyv  nav_test_find_polys_in_shape.rkyv  nav_test_path_find_follow.rkyv  nav_test_path_find_sliced.rkyv  nav_test_path_find_straight.rkyv  nav_test_pmesh.rkyv  nav_test_raycast.rkyv  nav_test_run_find_polys_in_circle.rkyv  nav_test_solid_1.rkyv  nav_test_solid_2.rkyv  nav_test_triareas.rkyv  undulating_chf.rkyv  undulating_cset.rkyv  undulating_distance_to_wall.rkyv  undulating_dmesh.rkyv  undulating_find_local_neighbourhood.rkyv  undulating_find_polys_in_circle.rkyv  undulating_find_polys_in_shape.rkyv  undulating_path_find_follow.rkyv  undulating_path_find_sliced.rkyv  (+7 more)
expected/tile_mesh/: dungeon_distance_to_wall.rkyv  dungeon_find_local_neighbourhood.rkyv  dungeon_find_polys_in_circle.rkyv  dungeon_find_polys_in_shape.rkyv  dungeon_path_find_follow.rkyv  dungeon_raycast.rkyv  (+21 more)
scripts/: build.bat
src/: base.rs  error.rs  lib.rs  utils.h
tests/: query.rs  solo_mesh.rs  tile_mesh.rs
(+25 files in other folders)
