[package]
name = "recastnavigation-rs"
version = "0.1.0"
authors = ["SlimeYummy <email@fenqi.moe>"]
edition = "2021"
resolver = "2"

[features]
default = ["rkyv"]
rkyv = ["dep:rkyv", "dep:miniz_oxide"]

[dependencies]
cxx = "1.0"
miniz_oxide = { version = "0.7", optional = true }
rkyv = { version = "0.7", optional = true }
static_assertions = "1.1"
thiserror = "1.0"

[build-dependencies]
cxx-build = "1.0"
